<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menuQuit">Quit</string>
    <string name="menuNewGame">New game</string>
    <string name="menuResume">Resume</string>
    <string name="menuSettings">Settings</string>
    <string name="menuGameRules">Game rules</string>
    <string name="app_name">Football</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_playfield">PlayfieldActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_new_game_settings">NewGameSettingsActivity</string>
    <string name="playerOneLabel">Player One</string>
    <string name="playerTwoLabel">Player Two</string>
    <string name="playerOneNickHint">Player one</string>
    <string name="playerTwoNickHint">Player Two</string>
    <string name="playerLabel">Player</string>
    <string name="computerPlayerLabel">Computer player</string>
    <string name="humanPlayerLabel">Human player</string>
    <string name="startGameLabel">Start game</string>
    <string name="oneComputerPlayerAllowedMessage">Only one computer player allowed in game</string>
    <string name="ok">ok</string>
    <string name="playerWinLabel">Score a goal and win</string>
    <string name="playerWinByBlockingOpponent">Win by blocking opponent</string>
    <string name="colorRed">Color red</string>
    <string name="colorBlue">Color blue</string>

    <string-array name="DifficultyLevelNames">
        <item>Trivial</item>
        <item>Easy</item>
        <item>Midle</item>
    </string-array>

    <string name="difficultyLevelLabel">Computer difficulty level</string>
    <string name="movesButtonLabel">movements</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="gameRules1">
Football game is puzzle game for max two person.
One person can play with computer. Game consists on put lines 
among square grid. Players put lines one by one.
Each of player has own color.   
    </string>
    <string name="gameRules2">
It is possible put more than one line, when one bounce from other line.        
    </string>
    <string name="gameRules3">
Player who put lines into opponent gate win the match.         
    </string>
    <string name="gameRules4">
Image below means than computer thinking and looking for the best movement.        
    </string>
</resources>
