<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".DescriptionActivity" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gameRules1" />

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/gameRules1"
		    android:src="@drawable/gr_simple_movements" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gameRules2" />

		<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/gameRules2"
		    android:src="@drawable/gr_simple_bounce" />

		<Space
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />

		<Space
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />

		<Space
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />

		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<ImageView
		    android:id="@+id/imageView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/gameRules2"
		    android:src="@drawable/gr_simple_bounce2" />

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gameRules3" />

		<ImageView
		    android:id="@+id/imageView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/gameRules3"
		    android:src="@drawable/gr_red_score_a_goal" />

		<TextView
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/gameRules4" />

		<ImageView
		    android:id="@+id/imageView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/gameRules4"
		    android:src="@drawable/ball_002" />

		<Button
		    android:id="@+id/gameRulesOkButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/ok" />

	</LinearLayout>
</ScrollView>	